--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+}
+
+body {
+    background: url("https://www.pixelstalk.net/wp-content/uploads/2016/04/Google-Wallpaper-Good-Full-HD.png");
+    background-size: cover;
+    background-repeat: repeat-y;
+    width: 70%;
+    margin: 0 auto;
+}
+
+#logo {
+  height: 150px;
+  line-height: 100px;
+  vertical-align: middle;
+}
+
+#titolo {
+    color: darkred;
+    font-size: 50px;
 }
