--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,45 @@ body {
   vertical-align: middle;
 }
 
-#titolo {
+#title {
     color: darkred;
     font-size: 50px;
+    font-weight: bold;
+}
+
+#line1 {
+    border: 3px inset lightgrey;
+    margin-bottom: 20px;
+}
+
+#search {
+    font-size: 18px;
+    margin-right: 10px;
+}
+
+#submit {
+    font-size: 18px;
+    font-weight: bold;
+    padding: 2px 10px 2px 10px;
+    background-color: darkred;
+    color: white;
+    cursor: pointer;
+    opacity: 0.9;
+    border-radius: 5px;
+}
+
+.notification {
+  margin-top: 20px;
+  color: white;
+  font-size: 30px;
+  line-height: 70px;
+}
+#number {
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background: orange;
+  text-align: center;
+  vertical-align: middle;
 }
